--- a/LearnC++/C++17_STL/2. Контейнеры STL.md
+++ b/LearnC++/C++17_STL/2. Контейнеры STL.md
@@ -499,9 +499,38 @@ sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
 ### Хорошей оптимизацией было бы использовать *std::string_view*.
 
 
+## Реализуем личный список текущих дел с помощью *std::priority_queue*
 
+```cpp
+int main () {
+    using item_type = std::pair <int, std::string>;
+    std::priority_queue <item_type> queue;
+    std::initializer_list <item_type> il {
+        {1, "dishes"},
+        {0, "watch tv"},
+        {2, "do homework"},
+        {0, "read comics"},
+    };
+    
+    for (const auto &p : il) {
+        queue.push (p);
+    }
 
+    while(!queue.empty ()) {
+    std::cout << queue.top ().first << ": " << queue.top ().second << '\n';
+        queue.pop ();
+    }
+    std::cout << std::endl;
+}
+```
 
+```bash
+$ ./main
+2: do homework
+1: dishes
+0: watch tv
+0: read comics
+```
 
 
 
