Пофиксил пару опечаток

--- a/LearnC++/C++17_STL/3. Итераторы.md
+++ b/LearnC++/C++17_STL/3. Итераторы.md
@@ -336,20 +336,26 @@ public:
         it2 (iterator2)
     {}
     
-    zip_iterator ++ () {
+    zip_iterator& operator ++ () {
         ++it1;
         ++it2;
         return *this;
     }
+
+    zip_iterator operator ++ (int) {
+        auto tmp {*this};
+        operator ++ ();
+        return tmp;
+    }
     
     bool operator != (const zip_iterator& rhs) const {
-        return it1 != other.it1 && it2 != other.it2;
+        return it1 != rhs.it1 && it2 != rhs.it2;
     }
     bool operator == (const zip_iterator& rhs) const {
         return !operator != (rhs);
     }
     
-    std::pait <double&, double&> operator * () const {
+    std::pair <double&, double&> operator * () const {
         return {*it1, *it2};
     }
 };
