--- a/LearnC++/C++17_STL/5. Основы работы с алгоритмами STL.md
+++ b/LearnC++/C++17_STL/5. Основы работы с алгоритмами STL.md
@@ -17,14 +17,14 @@ int main () {
     copy_n (begin(v), 3, inserter (m, begin (m)));
     auto shell_it (ostream_iterator <pair <int, string>> {cout, ", "});
     copy (begin (m), end (m), shell_it);
-    cout << cout;
+    cout << endl;
     
     m.clear ();
     move (begin (v), end (v), inserter (m, begin (m)));
     copy (begin (m), end (m), shell_it);
-    cout << cout;
+    cout << endl;
     copy (begin (v), end (v), shell_it);
-    cout << cout;
+    cout << endl;
 }
 ```
 ```bash
@@ -82,12 +82,10 @@ int main () {
     auto even_number ([](int i) { return i % 2 == 0; });
     
     // Не копировать если
-    remove_copy_if(begin(v), end(v),
-    back_inserter(v2), odd_number);
+    remove_copy_if(begin(v), end(v), back_inserter(v2), odd_number);
     
     // Копировать если
-    copy_if(begin(v), end(v),
-    back_inserter(v3), even_number);
+    copy_if(begin(v), end(v), back_inserter(v3), even_number);
     
     print(v2);
     print(v3);
@@ -111,7 +109,7 @@ $ ./removing_items_from_containers
 transform(begin(v), end(v),
           ostream_iterator<int>{cout, ", "},
           [] (int i) { return i * i; });
-cout << cout;
+cout << endl;
 
 // ...
 auto int_to_string ([] (int i) {
